--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <label>
           ⚔️ Normal Attack - Desired level:
           <select class="form-select mt-1" name="field1_2">
-            <option value="">Select a value</option>
+            <option value="0">Select a value</option>
           </select>
         </label>
       </div>
@@ -32,13 +32,13 @@
         <label>
           🌟 Elemental Skill - Current level:
           <select class="form-select mt-1" name="field2_1">
-            <option value="">Select a value</option>
+            <option value="0">Select a value</option>
           </select>
         </label>
         <label>
           🌟 Elemental Skill - Desired level:
           <select class="form-select mt-1" name="field2_2">
-            <option value="">Select a value</option>
+            <option value="0">Select a value</option>
           </select>
         </label>
       </div>
@@ -46,13 +46,13 @@
         <label>
           🌠 Elemental Burst - Current level:
           <select class="form-select mt-1" name="field3_1">
-            <option value="">Select a value</option>
+            <option value="0">Select a value</option>
           </select>
         </label>
         <label>
           🌠 Elemental Burst - Desired level:
           <select class="form-select mt-1" name="field3_2">
-            <option value="">Select a value</option>
+            <option value="0">Select a value</option>
           </select>
         </label>
       </div>
